Add simple ARC dataset generator and dense reward controls

--- a/ARC_AGI_PPO_Training.ipynb
+++ b/ARC_AGI_PPO_Training.ipynb
@@ -9,12 +9,12 @@
         "This notebook trains a PerceiverActorCritic model (~4.8M params) on the ARC-AGI-2 dataset using PPO.\n",
         "\n",
         "**Before running:**\n",
-        "1. Go to `Runtime` → `Change runtime type`\n",
+        "1. Go to `Runtime` \u2192 `Change runtime type`\n",
         "2. Set **Hardware accelerator** to **GPU**\n",
         "3. Select **A100 GPU** (Colab Pro+ required)\n",
         "4. Click **Save**\n",
         "\n",
-        "Then run all cells in order (`Runtime` → `Run all`).\n"
+        "Then run all cells in order (`Runtime` \u2192 `Run all`).\n"
       ]
     },
     {
@@ -61,7 +61,7 @@
         "# Quick GPU test\n",
         "x = jax.random.normal(jax.random.PRNGKey(0), (1000, 1000))\n",
         "result = jnp.dot(x, x).block_until_ready()\n",
-        "print(\"\\n✅ GPU is working!\")\n",
+        "print(\"\\n\u2705 GPU is working!\")\n",
         "\n",
         "# Check GPU memory\n",
         "!nvidia-smi --query-gpu=name,memory.total,memory.free --format=csv\n"
@@ -89,7 +89,42 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Quick Smoke Test (Optional, ~2 minutes)\n",
+        "## 4. Prepare Simple Datasets (Optional)\n",
+        "\n",
+        "Fetch the latest ARC-AGI-2 data, copy it into this repo, and generate intentionally easy `training_simple` / `val_simple` splits.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "%%bash\n",
+        "set -euo pipefail\n",
+        "cd /content/ArcX\n",
+        "mkdir -p data/training data/evaluation\n",
+        "if [ ! -d /content/arc-agi-2 ]; then\n",
+        "  git clone https://github.com/arcprize/ARC-AGI-2.git /content/arc-agi-2\n",
+        "else\n",
+        "  echo 'ARC-AGI-2 repository already exists; pulling latest changes.'\n",
+        "  git -C /content/arc-agi-2 pull --ff-only\n",
+        "fi\n",
+        "cp -f /content/arc-agi-2/data/training/*.json data/training/\n",
+        "cp -f /content/arc-agi-2/data/evaluation/*.json data/evaluation/\n",
+        "echo 'training count:'\n",
+        "ls -1 data/training | wc -l\n",
+        "echo 'evaluation count:'\n",
+        "ls -1 data/evaluation | wc -l\n",
+        "python scripts/make_simple_datasets.py\n",
+        "ls data\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Quick Smoke Test (Optional, ~2 minutes)\n",
         "\n",
         "Run this to verify everything is working before starting a long training run.\n"
       ]
@@ -112,7 +147,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Main Training Run\n",
+        "## 6. Main Training Run\n",
         "\n",
         "Choose one of the options below based on how long you want to train:\n",
         "\n",
@@ -172,7 +207,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. List Available Checkpoints\n"
+        "## 7. List Available Checkpoints\n"
       ]
     },
     {
@@ -199,7 +234,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7. Evaluate Model & Generate GIFs\n",
+        "## 8. Evaluate Model & Generate GIFs\n",
         "\n",
         "This will create GIF visualizations of the trained model solving ARC puzzles.\n"
       ]
@@ -231,7 +266,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8. Display Generated GIFs\n",
+        "## 9. Display Generated GIFs\n",
         "\n",
         "View the generated GIFs directly in the notebook.\n"
       ]
@@ -262,7 +297,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9. Download Results\n",
+        "## 10. Download Results\n",
         "\n",
         "Download GIFs and checkpoints to your local machine.\n"
       ]
@@ -288,7 +323,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10. Advanced: Mount Google Drive (Optional)\n",
+        "## 11. Advanced: Mount Google Drive (Optional)\n",
         "\n",
         "Save checkpoints directly to Google Drive to avoid losing them if Colab disconnects.\n"
       ]
@@ -322,7 +357,7 @@
       "source": [
         "---\n",
         "\n",
-        "## 📊 Understanding the Output\n",
+        "## \ud83d\udcca Understanding the Output\n",
         "\n",
         "During training, you'll see logs like:\n",
         "```\n",
@@ -334,13 +369,13 @@
         "- **steps**: Average episode length\n",
         "- **Train vs Test**: Train uses training tasks, Test uses held-out evaluation tasks\n",
         "\n",
-        "## 🎯 What to Expect\n",
+        "## \ud83c\udfaf What to Expect\n",
         "\n",
         "- **Random policy**: return ~0.0-0.2\n",
         "- **Learning progress**: return should increase to 0.5-1.0 over hundreds of updates\n",
         "- **Good performance**: return > 1.0 indicates the model is learning to match targets\n",
         "\n",
-        "## 🔧 Troubleshooting\n",
+        "## \ud83d\udd27 Troubleshooting\n",
         "\n",
         "**If GPU isn't detected:**\n",
         "- Check runtime type is set to GPU\n",
@@ -355,7 +390,7 @@
         "- Download checkpoints periodically\n",
         "- Keep browser tab active\n",
         "\n",
-        "## 📚 Documentation\n",
+        "## \ud83d\udcda Documentation\n",
         "\n",
         "- [Repository](https://github.com/Maharishiva/ArcX)\n",
         "- [PPO Training Overview](https://github.com/Maharishiva/ArcX/blob/main/docs/ppo_training_overview.md)\n",
@@ -363,13 +398,27 @@
         "\n",
         "---\n",
         "\n",
-        "**Happy training! 🚀**\n"
+        "**Happy training! \ud83d\ude80**\n"
       ]
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
