Simplify PPO metrics helpers and update Colab for wandb

--- a/ARC_AGI_PPO_Training.ipynb
+++ b/ARC_AGI_PPO_Training.ipynb
@@ -32,9 +32,9 @@
       "source": [
         "%%capture\n",
         "!sudo apt-get update\n",
-        "%pip install -U pip\n",
-        "%pip install \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
-        "%pip install flax optax orbax-checkpoint tensorstore imageio einops matplotlib pillow\n"
+        "%pip install -U pip wandb\n",
+        "%pip install \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html wandb\n",
+        "%pip install flax optax orbax-checkpoint tensorstore imageio einops matplotlib pillow wandb\n"
       ]
     },
     {
@@ -124,7 +124,27 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Quick Smoke Test (Optional, ~2 minutes)\n",
+        "## 5. (Optional) Enable Weights & Biases Logging\n",
+        "\n",
+        "Authenticate with wandb so training runs can report metrics.\n",
+        "Add `--wandb-mode online --wandb-project <your_project>` to any training command when you want logging.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "import wandb\n",
+        "wandb.login()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Quick Smoke Test (Optional, ~2 minutes)\n",
         "\n",
         "Run this to verify everything is working before starting a long training run.\n"
       ]
@@ -147,7 +167,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Main Training Run\n",
+        "## 7. Main Training Run\n",
         "\n",
         "Choose one of the options below based on how long you want to train:\n",
         "\n",
@@ -159,18 +179,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Long-run PPO training (simple data split)\n",
+        "\n",
+        "Uses `data/training_simple` to accelerate convergence.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "# Long-run PPO training (simple data split)\n",
+        "!PYTHONPATH=. python scripts/ppo_train.py \\\n",
+        "  --device cuda \\\n",
+        "  --num-envs 16 \\\n",
+        "  --rollout-length 64 \\\n",
+        "  --num-minibatches 4 \\\n",
+        "  --num-epochs 2 \\\n",
+        "  --eval-envs 8 \\\n",
+        "  --eval-horizon 512 \\\n",
+        "  --total-updates 10000 \\\n",
+        "  --eval-interval 25 \\\n",
+        "  --checkpoint-interval 100 \\\n",
+        "  --data-dir data/training_simple \\\n",
+        "  --wandb-mode online \\\n",
+        "  --wandb-project arc-agi-ppo \\\n",
+        "  --wandb-run-name colab_long_run_simple\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Option A: Quick test run (~30 minutes)\n",
+        "# Add --wandb-mode online --wandb-project <your_project> to enable wandb logging\n",
         "!PYTHONPATH=. python scripts/ppo_train.py \\\n",
         "    --preset a100 \\\n",
         "    --device cuda \\\n",
         "    --total-updates 100 \\\n",
         "    --eval-interval 20 \\\n",
-        "    --checkpoint-interval 25\n"
+        "    --checkpoint-interval 25 \\\n",
+        "    --data-dir data/training_simple\n"
       ]
     },
     {
@@ -207,7 +262,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7. List Available Checkpoints\n"
+        "## 8. List Available Checkpoints\n"
       ]
     },
     {
@@ -234,7 +289,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8. Evaluate Model & Generate GIFs\n",
+        "## 9. Evaluate Model & Generate GIFs\n",
         "\n",
         "This will create GIF visualizations of the trained model solving ARC puzzles.\n"
       ]
@@ -266,7 +321,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9. Display Generated GIFs\n",
+        "## 10. Display Generated GIFs\n",
         "\n",
         "View the generated GIFs directly in the notebook.\n"
       ]
@@ -297,7 +352,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10. Download Results\n",
+        "## 11. Download Results\n",
         "\n",
         "Download GIFs and checkpoints to your local machine.\n"
       ]
@@ -323,7 +378,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 11. Advanced: Mount Google Drive (Optional)\n",
+        "## 12. Advanced: Mount Google Drive (Optional)\n",
         "\n",
         "Save checkpoints directly to Google Drive to avoid losing them if Colab disconnects.\n"
       ]
