--- a/ARC_AGI_PPO_Training.ipynb
+++ b/ARC_AGI_PPO_Training.ipynb
@@ -7,14 +7,7 @@
     "# ARC-AGI PPO Training on Colab Pro+ (A100)\n",
     "\n",
     "This notebook trains a PerceiverActorCritic model (~4.8M params) on the ARC-AGI-2 dataset using PPO.\n",
-    "\n",
-    "**Before running:**\n",
-    "1. Go to `Runtime` → `Change runtime type`\n",
-    "2. Set **Hardware accelerator** to **GPU**\n",
-    "3. Select **A100 GPU** (Colab Pro+ required)\n",
-    "4. Click **Save**\n",
-    "\n",
-    "Then run all cells in order (`Runtime` → `Run all`).\n"
+    "\n"
    ]
   },
   {
@@ -61,8 +54,7 @@
     "# Quick GPU test\n",
     "x = jax.random.normal(jax.random.PRNGKey(0), (1000, 1000))\n",
     "_ = jnp.dot(x, x).block_until_ready()\n",
-    "print(\"\n",
-    "✅ GPU is working!\")\n",
+    "print(\"✅ GPU is working!\")\n",
     "\n",
     "# Check GPU memory\n",
     "!nvidia-smi"
@@ -414,56 +406,6 @@
     "\n",
     "# Export path for subsequent shell commands\n",
     "os.environ['drive_dir'] = drive_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## 📊 Understanding the Output\n",
-    "\n",
-    "During training, you'll see logs like:\n",
-    "```\n",
-    "Update 50/1000 | Train: return=0.234, steps=45.2 | Test: return=0.189, steps=38.5\n",
-    "Checkpoint saved: checkpoints/ppo_a100/ppo_50\n",
-    "```\n",
-    "\n",
-    "- **return**: Average reward (higher is better, max ~2.5)\n",
-    "- **steps**: Average episode length\n",
-    "- **Train vs Test**: Train uses training tasks, Test uses held-out evaluation tasks\n",
-    "\n",
-    "## 🎯 What to Expect\n",
-    "\n",
-    "- **Random policy**: return ~0.0-0.2\n",
-    "- **Learning progress**: return should increase to 0.5-1.0 over hundreds of updates\n",
-    "- **Good performance**: return > 1.0 indicates the model is learning to match targets\n",
-    "\n",
-    "## 🔧 Troubleshooting\n",
-    "\n",
-    "**If GPU isn't detected:**\n",
-    "- Check runtime type is set to GPU\n",
-    "- Restart runtime and re-run dependency installation\n",
-    "\n",
-    "**If training is slow:**\n",
-    "- Verify you're using A100 GPU (not T4)\n",
-    "- Check GPU utilization with `!nvidia-smi`\n",
-    "\n",
-    "**If Colab disconnects:**\n",
-    "- Use Google Drive mounting (Section 10)\n",
-    "- Download checkpoints periodically\n",
-    "- Keep browser tab active\n",
-    "\n",
-    "## 📚 Documentation\n",
-    "\n",
-    "- [Repository](https://github.com/Maharishiva/ArcX)\n",
-    "- [PPO Training Overview](https://github.com/Maharishiva/ArcX/blob/main/docs/ppo_training_overview.md)\n",
-    "- [ARC-AGI Challenge](https://arcprize.org/)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Happy training! 🚀**\n"
    ]
   }
  ],
